--- a/style.css
+++ b/style.css
@@ -58,57 +58,88 @@ h2{
     height: 100%;
     margin-left:-50%;
 }
+
+#correct{
+    width: 100%;
+    height: 100%;
+    margin: 1%;
+    padding-right: 21%;
+    padding-left: 10%;
+    padding-bottom: 17%;
+}
 .correctos{
-    display:flex;
+    display:block;
     font-size: 25px;
     margin-left: 10%;
     font-weight: bold;
     color: green;
+    padding: 3%;
+
 }
 .true{
-    display:flex;
+    display:block;
     margin-right: 25%;
     font-size: 15px;
     font-weight: bold;
     color: green;
+    padding: 3%;
 }
 .verdade{
-    display:flex;
+    display:block;
     margin-right: 25%;
     font-size: 15px;
     font-weight: bold;
     color: green;
+    padding: 3%;
 }
 .si{
-    display:flex;
+    display:block;
     margin-right: 25%;
     font-size: 15px;
     font-weight: bold;
     color: green;
+    padding: 3%;
+}
+
+#error{
+    margin: 1%;
+    margin-left: 30%;
+    padding-left: 14%;
+    padding-right: 30%;
+    padding-bottom: 20%;
+    width: 100%;
+    height: 100%;
 }
 .errores{
-    display:flex;
+    display:block;
     margin-left: 25%;
     font-size: 25px;
     font-weight: bold;
     color: red;
+    padding: 3%;
 }
 
 .false{
-    margin-right: 25%;
+    display:block;
+    margin-left: 30%;
     font-size: 15px;
     font-weight: bold;
     color: red;
+    padding: 3%;
 }
 .falso{
-    margin-right: 25%;
+    display:block;
+    margin-left: 30%;
     font-size: 15px;
     font-weight: bold;
     color: red;
+    padding: 3%;
 }
 .no{
-    margin-right: 25%;
+    display:block;
+    margin-left: 30%;
     font-size: 15px;
     font-weight: bold;
     color: red;
+    padding: 3%;
 }
