--- a/style.css
+++ b/style.css
@@ -1,33 +1,43 @@
 html{
     background-color: black;
 }
+
+.container{
+    text-align: -moz-center;    
+}
 .welcome{
     color: rgb(15, 5, 70);
     text-align: center;
     font-weight: bold;
-    font-size: 25px;
     background-color: rgb(218, 215, 40);
     margin: 4%;
     border-radius: 15px;
-    margin-left: 30%;
-    margin-right: 30%;
     padding-top: 3.5%;
     padding-bottom: 3%;
-}
-h1{
-    margin-bottom: 5%;
+    width: 45%;
     text-align: center;
+}
+.bienvenido ul{
+   padding-left: 0px; 
+   height: 100%;
+}
 
+h1, .welcome p{
+    margin-bottom: 5%;
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
 }
 a {
     border: none;
     color:black;
     background-color:rgb(227, 230, 96);
     text-decoration: none;
-    padding: 2%;
+    padding: 3%;
     font-size: 80%;
     font-weight: bold;
     text-align: center;
+    border-radius: 15px;
 }
 .btn{
     margin-right: 5%;
@@ -41,11 +51,11 @@ a {
     padding-left: 20%;
     padding-right: 20%;
     margin-top: 2%;
-    margin-left: 20%;
     text-align: center;
     border-radius: 15px;
     display: inline-block;
-    width: 20%;
+    width: 50%;
+    height: 100%;
 }
 h2{
     font-size: 50px;
@@ -56,25 +66,18 @@ h2{
     display:flex;
     width: 100%;
     height: 100%;
-    margin-left:-50%;
 }
 
 #correct{
     width: 100%;
     height: 100%;
-    margin: 1%;
-    padding-right: 21%;
-    padding-left: 10%;
-    padding-bottom: 17%;
+    text-align: initial;
 }
 .correctos{
     display:block;
     font-size: 25px;
-    margin-left: 10%;
     font-weight: bold;
     color: green;
-    padding: 3%;
-
 }
 .true{
     display:block;
@@ -102,21 +105,15 @@ h2{
 }
 
 #error{
-    margin: 1%;
-    margin-left: 30%;
-    padding-left: 14%;
-    padding-right: 30%;
-    padding-bottom: 20%;
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 .errores{
     display:block;
-    margin-left: 25%;
     font-size: 25px;
     font-weight: bold;
     color: red;
-    padding: 3%;
 }
 
 .false{
@@ -143,3 +140,55 @@ h2{
     color: red;
     padding: 3%;
 }
+
+
+/*#region Media Query*/
+    /*Tablet*/
+    @media only screen and (max-width: 768px) and (min-width: 576px) {
+        h1, .welcome p {
+            font-size: 15px;
+        }
+        h2 {
+            font-size: 40px;
+        }
+        resultado {
+            width: 60%;
+        }
+    }
+    /*Mobile*/
+    @media only screen and (max-width: 360px) {
+        .welcome {
+            width: 70%;
+        }
+        h1, .welcome p {
+            font-size: 15px;
+        }
+        h2 {
+            font-size: 25px;
+        }
+        .resultado{
+            width: 80%;    
+            padding-left: 5%;
+            padding-right: 5%;
+            }
+        .result{
+            margin-left: 0px;
+        }
+        .correctos, .errores{
+            font-size: 20px;
+        }
+        #correct{
+            min-width: 50%;
+            min-height: 100%;
+        }
+        #error{
+            min-width: 50%;
+            min-height: 100%;
+            margin-left: 0%;
+        }
+        #error p, #correct{
+            margin-left: 0%;
+        }
+
+    }
+    /*endregion*/
