--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html{
     background-color: black;
 }
-
 .container, .welcome{
     text-align:center;    
 }
@@ -18,14 +17,12 @@ html{
     text-align: center;
 }
 .bienvenido ul{
-   padding-left: 0px; 
-   height: 100%;
+    padding-left: 0px; 
+    height: 100%;
 }
 .bienvenido ul p{
     padding-top: 3%; 
- }
- 
-
+}
 h1, .welcome p{
     margin-bottom: 5%;
     font-size: 20px;
@@ -72,7 +69,6 @@ h2{
     width: 100%;
     height: 100%;
 }
-
 #correct{
     width: 100%;
     height: 100%;
@@ -84,7 +80,7 @@ h2{
     font-weight: bold;
     color: green;
 }
-.true{
+.true, .verdade, .si{
     display:block;
     margin-right: 25%;
     font-size: 15px;
@@ -92,23 +88,6 @@ h2{
     color: green;
     padding: 3%;
 }
-.verdade{
-    display:block;
-    margin-right: 25%;
-    font-size: 15px;
-    font-weight: bold;
-    color: green;
-    padding: 3%;
-}
-.si{
-    display:block;
-    margin-right: 25%;
-    font-size: 15px;
-    font-weight: bold;
-    color: green;
-    padding: 3%;
-}
-
 #error{
     width: 100%;
     height: 100%;
@@ -120,33 +99,15 @@ h2{
     font-weight: bold;
     color: red;
 }
-
-.false{
+.false, .falso, .no{
     display:block;
     margin-left: 30%;
     font-size: 15px;
     font-weight: bold;
     color: red;
-    padding: 3%;
+    padding: 3%; 
+    margin-left: -10%;
 }
-.falso{
-    display:block;
-    margin-left: 30%;
-    font-size: 15px;
-    font-weight: bold;
-    color: red;
-    padding: 3%;
-}
-.no{
-    display:block;
-    margin-left: 30%;
-    font-size: 15px;
-    font-weight: bold;
-    color: red;
-    padding: 3%;
-}
-
-
 /*#region Media Query*/
     /*Tablet*/
     @media only screen and (max-width: 768px) and (min-width: 576px) {
@@ -177,7 +138,6 @@ h2{
         #error p, #correct{
             margin-left: 0%;
         }
-
     }
     /*Mobile*/
     @media only screen and (max-width: 575px) {
@@ -214,6 +174,5 @@ h2{
             margin-left: 0%;
             margin-left: 5%;
         }
-
     }
     /*endregion*/
